--- a/application/build.gradle
+++ b/application/build.gradle
@@ -10,11 +10,14 @@ repositories {
 }
 
 dependencies {
-
     implementation(project(":domain"))
+
+    implementation 'io.vavr:vavr:0.10.4'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+
+    testImplementation 'org.mockito:mockito-junit-jupiter:4.6.1'
 }
 
 test {
