--- a/build.gradle
+++ b/build.gradle
@@ -1,22 +1,19 @@
 plugins {
-	id 'org.springframework.boot' version '2.7.1'
-	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
 }
 
-group = 'com.codeflix.admin.catalog'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '17'
+group 'com.fullcycle.admin.catalogo'
+version '1.0-SNAPSHOT'
 
 repositories {
 	mavenCentral()
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
 
-tasks.named('test') {
+test {
 	useJUnitPlatform()
 }
