--- a/infrastructure/build.gradle
+++ b/infrastructure/build.gradle
@@ -16,7 +16,7 @@ plugins {
 }
 
 group 'com.codeflix.admin.catalog.infrastructure'
-version '0.0.1-SNAPSHOT'
+version '1.0-SNAPSHOT'
 
 bootJar {
     archiveName 'application.jar'
@@ -35,20 +35,23 @@ dependencies {
 
     implementation('mysql:mysql-connector-java')
 
-    implementation('org.springframework.boot:spring-boot-starter-web') {
-        exclude module: 'spring-boot-starter-tomcat'
-    }
-
     implementation('org.springdoc:springdoc-openapi-webmvc-core:1.6.8')
     implementation('org.springdoc:springdoc-openapi-ui:1.6.8')
 
-    implementation('com.fasterxml.jackson.module:jackson-module-afterburner')
-
+    implementation('org.springframework.boot:spring-boot-starter-web') {
+        exclude module: 'spring-boot-starter-tomcat'
+    }
     implementation('org.springframework.boot:spring-boot-starter-undertow')
     implementation('org.springframework.boot:spring-boot-starter-data-jpa')
 
+    implementation('com.fasterxml.jackson.module:jackson-module-afterburner')
+
     testImplementation('org.flywaydb:flyway-core')
     testImplementation('org.springframework.boot:spring-boot-starter-test')
+
+    testImplementation('org.testcontainers:testcontainers:1.17.2')
+    testImplementation('org.testcontainers:mysql:1.17.2')
+    testImplementation('org.testcontainers:junit-jupiter:1.17.2')
 
     testRuntimeOnly('com.h2database:h2')
 }
